<resources>
    <string name="app_name" translatable="false">APPosto</string>
    <string name="appLogo" translatable="false">appLogo</string>

    <!--   String signUpLayout -->
    <string name="signUp_email_description_text">Inserisci email:</string>
    <string name="signUp_password_description_text">Inserisci password:</string>
    <string name="signUp_Cpassword_description_text">Conferma password:</string>
    <string name="signUp_dati_description_text">Inserisci i tuoi dati:</string>
    <string name="signUp_emailField_text" translatable="false">Email</string>
    <string name="signUp_passwordField_text" translatable="false">Password</string>
    <string name="signUp_CpasswordField_text">Conferma Password</string>
    <string name="signUp_yesAccount_description_text">Sei già registrato?</string>
    <string name="signUp_accedi_description_text">Accedi!</string>
    <string name="signUp_registrati_button_description_text">Registrati</string>
    <string name="signUp_conferma_button_description_text">Conferma</string>
    <string name="signUp_nome_text">Nome</string>
    <string name="signUp_cognome_text">Cognome</string>
    <string name="signUp_data_text">Data di nascita</string>
    <string name="signUp_cellulare_text">Cellulare</string>
    <string name="signUp_citta_text">Città di nascita</string>
    <string name="progressDialogSignupTitle">Creazione profilo</string>
    <string name="progressDialogSignupText">Creazione profilo in corso...</string>

    <!--   String loginLayout -->
    <string name="login_emailField_text" translatable="false">Email</string>
    <string name="login_passwordField_text" translatable="false">Password</string>
    <string name="login_ricordami_description_text">Ricordami</string>
    <string name="login_passwordDimenticata_description_text">Password dimenticata?</string>
    <string name="login_noAccount_description_text">Non hai un account?</string>
    <string name="login_registrati_description_text">Registrati!</string>
    <string name="login_accedi_button_description_text">Accedi</string>

    <!--   String reservation_row_layout -->
    <string name="reservation_id_text">Codice prenotazione: </string>
    <string name="reservation_date_text">Inizio prenotazione: </string>
    <string name="reservation_date_finish_text">Fine prenotazione: </string>
    <string name="reservation_address_text">Indirizzo del posteggio: </string>
    <string name="reservation_amount_text">Costo totale: </string>
    <string name="detailed_reservation_title"> Prenotazione </string>
    <string name="detailed_reservation_tv"> Dettagli della prenotazione</string>
    <string name="reservation_omaggio">Questa è una prenotazione omaggio! </string>
    <string name="reservation_string1">Prenotazione n°:</string>
    <string name="reservation_string2">effettuata in data </string>
    <string name="reservation_description">Le tue prenotazioni</string>

    <!-- Profile Activity -->
    <string name="profile_tilte">Il tuo profilo</string>
    <string name="profile_birthdate">Data di nascita:</string>
    <string name="profile_city">Città:</string>
    <string name="profile_changepwd">Cambia password</string>
    <string name="profile_name">Nome Cognome</string>
    <string name="profile_topup">Ricarica</string>
    <string name="profile_wallet" translatable="false">My Wallet:</string>


    <!--   String MapLayout -->
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="barText">SCEGLI IL TUO POSTO!!</string>
    <string name="QrCode" translatable="false">QRbutton</string>
    <string name="direction" translatable="false">DirButton</string>
    <string name="toast_no_parking">Spiacenti nessun posto libero in questa area!</string>
    <string name="permcameradenied">Errore: Impossibile usare lo scanner!</string>


    <!--   String ScannerActivity -->
    <string name="scanner_info">Cattura il QR code associato alla colonnina</string>
    <!-- Place autoComplete API, hardcode, take care -->

    <string name="qr_snackbar">\"No prenotazioni attive\"</string>

    <!--   String NavigationToolbar -->
    <string name="open">Apri</string>
    <string name="close">Chiudi</string>

    <!--    String mapPanel-->
    <string name="panel_station">Stazione selezionata</string>
    <string name="panel_durata">Durata Prenotazione</string>
    <string name="panel_distance">Distanza</string>
    <string name="panel_tariffa">Tariffa</string>
    <string name="panel_button">Prenota!</string>
    <string name="panel_image">Immagine Parcheggio</string>
    <string name="panel_distance_value">-</string>
    <string name="panel_tariffa_value">tariffaValue</string>
    <string name="panel_time_continue">Ignora</string>
    <string name="panel_no_ext">Chiudi prenotazione</string>
    <string name="panel_ext">Estendi prenotazione per ulteriori 10 min</string>
    <string name="panel_time_text">La tua prenotazione è in scadenza.\nVuoi prorogarla?</string>
    <!--    Server Result-->
    <string name="sorry">Spiacente, non è il tuo parcheggio.</string>
    <string name="zero_wallet">Attenzione! Non hai abbastanza credito, ricarica!</string>
    <!--    Notification & Redirect-->
    <string name="channel_name" translatable="false">appostoChannel</string>
    <string name="panel_rdrct" translatable="false">"REDIRECT "</string>


    <!-- String edit_favourites -->
    <!-- Menu contestuale -->
    <string name="favourite_delete_option">Elimina preferito</string>
    <string name="favourite_update_option">Modifica etichetta</string>
    <string name="favourite_delete_all_option">Elimina tutto</string>
    <!--Dialog per inserire/modificare etichetta-->
    <string name="dialog_fav_title">Nuovo preferito</string>
    <string name="dialog_fav_message">Inserisci un\'etichetta per il luogo selezionato:</string>
    <string name="dialog_modify_fav_title">Inserisci la nuova etichetta:</string>
    <string name="dialog_confirm">Invia</string>
    <string name="dialog_delete">Cancella</string>
    <!--Gestione preferiti-->
    <string name="favourite_title">Stazioni preferite</string>
    <string name="favourite_not_found">Non hai salvato nessun preferito!</string>
    <string name="favourites_address">Indirizzo:</string>
    <string name="favourites_label">Etichetta:</string>
    <string name="favourites_label_text">La mia etichetta</string>
    <string name="favourites_address_text">Il mio indirizzo</string>
    <string name="favourites_button_save">Salva modifiche</string>
    <string name="favourites_button_delete">Cancella preferito</string>
    <string name="favourites_button_back">Annulla</string>
    <string name="favourite_repeated">E\' già presente un preferito con questa etichetta, prova con un altro nome!</string>
    <string name="label_empty">Errore: hai inserito un\'etichetta vuota!</string>

    <!-- String wallet management -->
    <string name="tv_activity_payment_title">Ricarica conto</string>
    <string name="tv_activity_payment_wallet_description">Credito residuo</string>
    <string name="tv_activity_payment">Scegli l\'importo da ricaricare </string>
    <string name="rb_activity_payment_5" translatable="false">5€</string>
    <string name="rb_activity_payment_10" translatable="false">10€</string>
    <string name="rb_activity_payment_15" translatable="false">15€</string>
    <string name="rb_activity_payment_20" translatable="false">20€</string>
    <string name="rb_activity_payment_50" translatable="false">50€</string>
    <string name="bt_activity_payment_">Paga</string>
    <string name="tv_operation">Operazione effettuata con successo!</string>
    <string name="tv_payment_detail">Ecco i dettagli del pagamento:</string>
    <string name="bt_go_to_map">Vai alla mappa</string>
    <string name="payment_detail_id">Codice transazione:</string>
    <string name="payment_detail_status">Stato:</string>
    <string name="payment_detail_amount">Importo ricaricato:</string>
    <string name="payment_detail_current">Credito residuo sul wallet:</string>

    <!-- Navigatore -->
    <string name="progressDialogTitle">Avvio navigatore</string>
    <string name="progressDialogText">Calcolo del percorso in corso..</string>
    <string name="alertNoPermissionGranted">Necessari permessi di localizzazione</string>
    <string name="alertNoNavigator">Impossibile iniziare la navigazione verso la tua destinazione perchè hai negato i permessi di localizzazione.</string>

    <!-- Prenotazione -->
    <string name="error_close_res">Problemi di connessione col server. Riprova.</string>
    <string name="ok">La prenotazione è stata chiusa con successo</string>
    <string name="reserv_success">La prenotazione è stata aperta con successo</string>
    <string name="occupied">Attenzione! Il parcheggio che hai prenotato è stato occupato.</string>
    <string name="alreadybooked">Spiacente, non puoi aprire un\'altra prenotazione!</string>
    <string name="channel_description">Channel per APPosto</string>
    <string name="redirectMessage">Attenzione! Qualcuno sta occupando il parcheggio che hai prenotato. Cosa preferisci fare?</string>
    <string name="panel_no_rdrct">CHIUDI PRENOTAZIONE GRATIS</string>
    <string name="panel_rdrc_text">Verrai reindirizzato al seguente parcheggio più vicino alla tua destinazione:</string>
    <string name="panel_label_park">Parcheggio n.</string>
    <string name="panel_label_dist">Distanza:</string>
    <string name="panel_label_address">Indirizzo:</string>
    <string name="panel_no_rdrc_text">Spiacente, non ci sono altri parcheggi liberi nei pressi della destinazione!</string>
    <string name="reservationOpened">Prenotazione in corso...</string>
    <string name="alertCloseReser">Chiudi Prenotazione Attiva</string>
    <string name="alertCloseMessage">Sei sicuro di voler terminare la prenotazione in corso? Ti verrà addebitata la somma spesa fino ad ora.</string>


    <!-- Filtri-->
    <string name="panel_filter_switch_area_text">Aree preferite</string>
    <string name="panel_filter_switch_raggio_text">Raggio in km</string>
    <string name="panel_filter_switch_tariffa_text">Tariffa</string>
    <string name="panel_filter_button_text">Applica Filtri</string>
    <string name="panel_filter_toast_no_selected_place">Filtro sul raggio non applicabile, cercare prima una destinazione!</string>
    <string name="panel_filter_toast_no_selected_area">Filtro su area non applicabile, selezionare una stazione preferita!</string>
    <string name="panel_price">Tariffa</string>
    <string name="panel_street">Indirizzo</string>
    <string name="panel_filter_spinner">Scegli area</string>
    <string name="panel_filter_no_favorite">Non ci sono preferiti.</string>

    <!-- Alarm -->
    <string name="alarm_notif_text">Tra 10 minuti scadrà la tua prenotazione. Clicca per prorogare!</string>
    <string name="alarm_notif_title">Prenotazione in scadenza!</string>

    <!-- Menu -->
    <string name="profile_menu">Profilo</string>
    <string name="storico_menu">Storico prenotazioni</string>
    <string name="favourite_menu">Preferiti</string>
    <string name="logout_menu" translatable="false">Logout</string>

</resources>
