<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/show_profile_id"
            android:checked="false"
            android:title="@string/profile_menu"
            android:textColorHighlight="@color/bluMain"/>

        <item
            android:id="@+id/show_reservations"
            android:checked="false"
            android:title="@string/storico_menu" />
        <item
            android:id="@+id/favourite_management_id"
            android:checked="false"
            android:title="@string/favourite_menu" />
        <item
            android:id="@+id/logout_profile_id"
            android:checked="false"
            android:title="@string/logout_menu" />


    </group>
</menu>
