<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUp_constraintLayout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/signUp_userData_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signUp_registrati_button_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/signUp_descrizioneEmail_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUp_cityField_id"
            android:layout_alignStart="@id/signUp_emailField_id"
            android:text="@string/signUp_email_description_text"
            android:textColor="@color/neroPiscacchia" />

        <EditText
            android:id="@+id/signUp_emailField_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUp_descrizioneEmail_id"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/signUp_emailField_text"
            android:background="@drawable/login_edit_text_shape"
            android:ems="10"
            android:hint="@string/signUp_emailField_text"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <TextView
            android:id="@+id/signUp_descrizionePassword_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUp_emailField_id"
            android:layout_alignStart="@id/signUp_emailField_id"
            android:layout_centerHorizontal="false"
            android:layout_marginTop="15dp"
            android:text="@string/signUp_password_description_text"
            android:textColor="@color/neroPiscacchia" />


        <EditText
            android:id="@+id/signUp_passwordField_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUp_descrizionePassword_id"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/signUp_passwordField_text"
            android:background="@drawable/login_edit_text_shape"
            android:ems="10"
            android:hint="@string/signUp_passwordField_text"
            android:inputType="textPassword"
            android:padding="10dp" />

        <TextView
            android:id="@+id/signUp_descrizioneCpassword_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUp_passwordField_id"
            android:layout_alignStart="@id/signUp_emailField_id"
            android:layout_marginTop="15dp"
            android:text="@string/signUp_Cpassword_description_text"
            android:textColor="@color/neroPiscacchia" />

        <EditText
            android:id="@+id/signUp_CpasswordField_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUp_descrizioneCpassword_id"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/signUp_CpasswordField_text"
            android:background="@drawable/login_edit_text_shape"
            android:ems="10"
            android:hint="@string/signUp_CpasswordField_text"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/signUp_nameField_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_edit_text_shape"
            android:ems="10"
            android:hint="@string/signUp_nome_text"
            android:autofillHints="@string/signUp_nome_text"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/signUp_surnameField_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUp_nameField_id"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_edit_text_shape"
            android:ems="10"
            android:hint="@string/signUp_cognome_text"
            android:autofillHints="@string/signUp_cognome_text"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/signUp_dateField_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUp_surnameField_id"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_edit_text_shape"
            android:ems="10"
            android:hint="@string/signUp_data_text"
            android:autofillHints="@string/signUp_data_text"
            android:inputType="date"
            android:padding="10dp" />

        <EditText
            android:id="@+id/signUp_phoneField_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUp_dateField_id"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_edit_text_shape"
            android:ems="10"
            android:hint="@string/signUp_cellulare_text"
            android:autofillHints="@string/signUp_cellulare_text"
            android:inputType="phone"
            android:padding="10dp" />

        <EditText
            android:id="@+id/signUp_cityField_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUp_phoneField_id"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_edit_text_shape"
            android:ems="10"
            android:hint="@string/signUp_citta_text"
            android:autofillHints="@string/signUp_citta_text"
            android:inputType="textPersonName"
            android:padding="10dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/signUp_yesAccount_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/signUp_yesAccount_description_text"
        android:textColor="@color/neroPiscacchia"
        app:layout_constraintEnd_toStartOf="@+id/signUp_accedi_id"
        app:layout_constraintTop_toBottomOf="@+id/signUp_userData_id" />

    <TextView
        android:id="@+id/signUp_accedi_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="goToLogin"
        android:text="@string/signUp_accedi_description_text"
        android:textColor="@color/gialloPiscacchia"
        app:layout_constraintEnd_toEndOf="@+id/signUp_userData_id"
        app:layout_constraintTop_toBottomOf="@+id/signUp_userData_id" />

    <Button
        android:id="@+id/signUp_registrati_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/confirm_button"
        android:onClick="signup"
        android:padding="15dp"
        android:text="@string/signUp_registrati_button_description_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_userData_id" />

</androidx.constraintlayout.widget.ConstraintLayout>

