<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:alpha="0.95"
    android:background="@drawable/popup_bckground"
    android:backgroundTint="@color/bianco">

    <TextView
        android:id="@+id/textView"
        style="@android:style/Widget.Material.Light.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/panel_time_text"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/panel_proroga_time"
        style='"?android:attr/buttonBarButtonStyle"'
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_rounded_border"
        android:backgroundTint="@color/grigio"
        android:onClick="onContinueReservation"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/panel_time_continue"
        android:textColor="@color/nero"
        app:layout_constraintStart_toStartOf="@+id/panel_continue_time"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/panel_cancel_time"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"
        android:background="@drawable/button_rounded_border"
        android:backgroundTint="@color/bluMain"
        android:onClick="onEndReservationTime"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/panel_no_ext"
        android:textColor="@color/bianco"
        app:layout_constraintEnd_toEndOf="@+id/panel_continue_time"
        app:layout_constraintTop_toTopOf="@+id/panel_proroga_time" />

    <Button
        android:id="@+id/panel_continue_time"
        style='"?android:attr/buttonBarButtonStyle"'
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="0.33"
        android:background="@drawable/button_rounded_border"
        android:backgroundTint="@color/gialloMain"
        android:onClick="onExtend"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/panel_ext"
        android:textColor="@color/bianco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/panel_cancel_time" />

</androidx.constraintlayout.widget.ConstraintLayout>